--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port = 8089
-spring.datasource.url= jdbc:mysql://localhost:3306/projetspring?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC ;
-//jdbc://mysql://localhost:3306/projetspring
-spring.datasource.username=lyne
-spring.datasource.password=spring
-spring.datasource.driverclassName=com.mysql.cj.jdbc
+server.port = 8085
+spring.datasource.url=jdbc:mysql://localhost:3306/gestionecole?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driverclassName=com.mysql.cj.jdbc.Driver
 spring.jpa.shwo-sql = true
-spring.jpa.hibernate.ddl(auto= updatespring.jp.properties.dialect = org.hibernate.MySQL5Dialect
+spring.jpa.hibernate.ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
